--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,74 +1,89 @@
 
-.container {
+.container 
+{
 width: 710px;
 }
 
-body {
+body 
+{
 background: #cff;
 }
 
-header {
+header 
+{
 padding-top: 20px;
 }
 
-header img {
+header img 
+{
 padding: 1em;
 background: #fff;
 }
 
-section {
+section 
+{
 margin-top: 1em;
 font-size; 120%;
 padding: 20px;
 background: #fff;
 }
 
-a {
+a 
+{
 color: #09c;
 text-decoration: none;
 }
 
-a:hover {
+a:hover 
+{
 color: #069;
 text-decoration: underline;
 }
 
-a:visited {
+a:visited 
+{
 color: #069;
 }
 
-nav {
+nav 
+{
 float: right;
 background: white;
 padding: 0 0.7em;
 white-space: nowrap;
 }
 
-nav ul {
+nav ul 
+{
 margin: 0px;
 padding: 0px;
 }
 
-nav ul li {
+nav ul li 
+{
 list-style-type: none;
 display: inline-block;
 padding: 0.2em 0;
 }
 
-nav ul li {
+nav ul li 
+{
 padding: 0 5px;
 font-weight: bold;
 }
 
-nav ul li a:visited {
+nav ul li a:visited 
+{
 color: #09c;
 }
 
-nav ul li a:hover {
+nav ul li a:hover 
+{
 text-decoration: underline;
 }
 
-a.signup_button{
+a.signup_button
+{
 margin-left: auto;
 margin-right: auto;
 display: block;
@@ -81,13 +96,15 @@ font-weight: bold;
 padding: 20px;
 }
 
-.round {
+.round 
+{
 -moz-border-radius: 10px;
 -webkit-border-radius: 10px;
 border-radius: 10px;
 }
 
-footer {
+footer 
+{
 text-align: center;
 margin-top: 10px;
 width: 710px;
@@ -95,7 +112,8 @@ margin-left: auto;
 margin-right: auto;
 }
 
-footer nav {
+footer nav 
+{
 float: none;
 }
 
