--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title><%= @title %></title>
   <%= stylesheet_link_tag    'blueprint/screen', :media=>'screen' %>
   <%= stylesheet_link_tag    'blueprint/print', :media=>'print' %>
+  <%= stylesheet_link_tag    'custom', :media=>'screen' %>
+
 
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
